# SMARTER-backend

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  HISTORY.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-compose-workflow.yml
docker-entrypoint-initdb.d/: 01-add_user.js
flask-data/: smarter_uwsgi.ini
flask-data/smarter/: .coveragerc  __init__.py  app.py  commands.py  pytest.ini  wsgi.py
flask-data/smarter/common/: utils.py  views.py
flask-data/smarter/database/: db.py  models.py
flask-data/smarter/docs/source/: accessing.rst  conf.py  index.rst  installing.rst  introduction.rst  modules.rst
flask-data/smarter/docs/source/accessing/: python.rst  r.rst  thirdy-party.rst
flask-data/smarter/docs/source/modules/: common.rst  database.rst
flask-data/smarter/resources/: GeoJSON.py  auth.py  breeds.py  chips.py  countries.py  datasets.py  errors.py  info.py  routes.py  samples.py  variants.py
flask-data/smarter/tests/: base.py  test_GeoJSON.py  test_breeds.py  test_chips.py  test_commands.py  test_countries.py  test_datasets.py  test_info.py  test_login.py  test_samples.py  test_variants.py
flask-data/smarter/tests/fixtures/: breeds.json  countries.json  dataset.json  sampleGoat.json  sampleSheep.json  smarterInfo.json  supportedChips.json  user.json  variantGoat.json  variantSheep.json
nginx/: Dockerfile
nginx/conf.d/: default.conf
uwsgi/: Dockerfile  requirements.txt
