[tool.poetry]
name = "smarter-backend"
version = "0.3.0"
description = "SMARTER Backend API"
authors = ["Paolo Cozzi <bunop@libero.it>"]
license = "GPLv3"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
uwsgi = "^2.0.22"
uwsgitop = "^0.11"
flask-restful = "^0.3.10"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.5.2"
flask-cors = "^4.0.0"
python-dateutil = "^2.8.2"
flake8 = "^6.1.0"
pytest = "^7.4.2"
ipython = "^8.15.0"
flask-shell-ipython = "^0.5.1"
coverage = "^7.3.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
flasgger = "^0.9.7.1"
mongoengine = "^0.27.0"
flask = "2.2.5"
flask-mongoengine = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
