[tool.poetry]
name = "smarter-backend"
version = "0.3.0.dev0"
description = "SMARTER Backend API"
authors = ["Paolo Cozzi <bunop@libero.it>"]
license = "GPLv3"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
uwsgi = "^2.0.22"
uwsgitop = "^0.12"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.5.2"
flask-cors = "^4.0.0"
python-dateutil = "^2.8.2"
flake8 = "^7.0.0"
pytest = "^7.4.2"
ipython = "^8.15.0"
flask-shell-ipython = "^0.5.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
flasgger = "^0.9.7.1"
mongoengine = "0.27"
flask = "^3.0.3"
werkzeug = "^3.0.3"
coveralls = "^3.3.1"
coverage = "5.*"
pyflakes = "^3.2.0"
flask-mongoengine2 = "^2.1.0"
flask-restx = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
